renamespace CheeseCameraDeviceMonitor

This ensures empathy will always use our version, even when linking on
libcheese, and so avoid incompatibliy when libcheese breaks its ABI.

https://bugzilla.gnome.org/show_bug.cgi?id=665244